Details
-
Bug
-
Resolution: Fixed
-
Critical
-
0.4.15-dev-7007-gcc63d8f https://github.com/reactos/reactos/commit/cc63d8f4a2c3e4e22dd3f4c706e2373978914b68
Description
reactos-bootcd-0.4.15-dev-7006-gd2b8b9e-x86-gcc-lin-dbg
reactos-bootcd-0.4.15-dev-7007-gcc63d8f-x86-gcc-lin-dbg => BSOD 0x19
reactos-bootcd-0.4.15-dev-7008-g4db1b0f-x86-gcc-lin-dbg => "Assertion failed: FreeEntry->PreviousSize == CurrentEntry->Size" too, see ReactOS.log![]()
reactos-bootcd-0.4.15-dev-7009-gcce399e-x86-gcc-lin-dbg => BSOD 0x50 too see https://jira.reactos.org/browse/CORE-19337?focusedId=140835&page=com.atlassian.jira.plugin.system.issuetabpanels:comment-tabpanel#comment-140835
Guilty commit : https://github.com/reactos/reactos/commit/cc63d8f4a2c3e4e22dd3f4c706e2373978914b68 by Fraizeraust from https://github.com/reactos/reactos/pull/4571
ThFabba has identified some clues about the cause (Mattermost chat)
Installing VLC 3.0.18 from RAPPS
Similar to CORE-19343


(win32ss/user/ntuser/winpos.c:3526) err: NtUserSetWindowPos bad window handle! |
(ntoskrnl/mm/ARM3/expool.c:284) Entry BlockSize 129, tag CM . NextEntry PreviousSize 511, tag ▒▒▒▒*** Fatal System Error: 0x00000019 |
(0x00000005,0xE19E0408,0x00000120,0xE19E0000) |
Entered debugger on embedded INT3 at 0x0008:0x805AA7D8.kdb:> b |
Command 'b' is unknown.kdb:> bt |
Eip:
|
<ntoskrnl.exe:1aa7d8 (sdk/lib/rtl/i386/debug_asm.S:56 (RtlpBreakWithStatusInstruction))> |
Frames:
|
<ntoskrnl.exe:97589 (ntoskrnl/ke/bug.c:1070 (KeBugCheckWithTf))> |
<ntoskrnl.exe:97af3 (ntoskrnl/ke/bug.c:1417 (KeBugCheckEx))> |
<ntoskrnl.exe:b75b3 (ntoskrnl/mm/ARM3/expool.c:282 (ExpCheckPoolHeader))> |
<ntoskrnl.exe:b77fa (ntoskrnl/mm/ARM3/expool.c:393 (ExpCheckPoolBlocks))> |
<ntoskrnl.exe:ba36c (ntoskrnl/mm/ARM3/expool.c:2782 (ExFreePoolWithTag))> |
<ntoskrnl.exe:bb119 (ntoskrnl/mm/ARM3/expool.c:2926 (ExFreePool))> |
<ntoskrnl.exe:23831 (ntoskrnl/config/cmwraprs.c:68 (CmpFree))> |
<ntoskrnl.exe:18b1aa (sdk/lib/cmlib/hivewrt.c:205 (HvSyncHive))> |
<ntoskrnl.exe:1b0a1 (ntoskrnl/config/cmlazy.c:80 (CmpDoFlushNextHive))> |
<ntoskrnl.exe:1b334 (ntoskrnl/config/cmlazy.c:206 (CmpLazyFlushWorker))> |
<ntoskrnl.exe:423f8 (ntoskrnl/ex/work.c:158 (ExpWorkerThreadEntryPoint))> |
<ntoskrnl.exe:13fbda (ntoskrnl/ps/thread.c:156 (PspSystemThreadStartup))> |
<ntoskrnl.exe:16395d (ntoskrnl/ke/i386/thrdini.c:78 (KiThreadStartup))> |
<ntoskrnl.exe:13fbad (ntoskrnl/ps/thread.c:63 (PspUserThreadStartup))> |
<ec835356>
|
Couldn't access memory at 0x57E58959! |
Attachments
Issue Links
- blocks
-
CORE-15603 Office 2003 Testing
-
- Untriaged
-
- is duplicated by
-
CORE-19322 BSOD 0x139 when Installing Vivaldi only once
-
- Resolved
-
-
CORE-19343 BSOD 0x19 (BAD_POOL_HEADER) when installing FAR Manager 3
-
- Resolved
-