[CMLIB] Avoid hardcoding dirty bitmap length in HvpRecoverDataFromLog. CORE-19337